--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,21 +1,26 @@
 /* --- FOOTER --- */
 .footer_container {
+  height: var(--footerHeight_S);
   width: 100%;
-  text-align: center;
   background-color: #151515;
-  padding: 0.5rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 .footer_wrapper {
-  margin: 1rem 0;
+  height: calc(var(--footerHeight_S) - 2rem);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 .footer_container .copyright {
   color: var(--mainFontColor);
   font-weight: bold;
   display: inline-block;
 }
-.footer_container .links ul {
-  margin: 0.8rem;
-}
+
 .links li {
   display: inline-block;
   color: var(--mainFontColor);
@@ -27,10 +32,7 @@
 .links li:hover {
   color: #4caf50;
 }
-.footer_container .follow_us ul {
-  margin-top: 1.5rem;
-  margin-bottom: 1rem;
-}
+
 .follow_us li {
   display: inline-block;
   margin: 0 0.8rem;
@@ -75,433 +77,10 @@
   background-image: url("../img/iconmonstr-instagram-13-32-2.png");
 }
 
-.disclaimer {
+.disclaimer p {
   color: var(--mainFontColor);
+  text-align: center;
   font-size: 0.8rem;
-  line-height: 1.5rem;
-  padding: 0 1.5rem;
-}
-@media only screen and (min-width: 568px) and (orientation: portrait) {
-  /* --- FOOTER --- */
-  .footer_container .copyright {
-    font-size: 0.8rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.2rem;
-  }
-  .links li {
-    font-size: 0.8rem;
-    font-weight: normal;
-    margin: 0 0.4rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2rem;
-    margin-bottom: 1.4rem;
-  }
-  .follow_us li {
-    margin: 0 1.2rem;
-  }
-
-  .social_media {
-    height: 24px;
-    width: 24px;
-  }
-
-  .disclaimer {
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-    padding: 0 1.5rem;
-  }
-}
-
-@media only screen and (min-width: 768px) and (orientation: portrait) {
-  .footer_container .copyright {
-    font-size: 1.2rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.4rem;
-  }
-  .links li {
-    font-size: 1.2rem;
-    font-weight: normal;
-    margin: 0 0.2rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2rem;
-    margin-bottom: 1.4rem;
-  }
-  .follow_us li {
-    margin: 0 1.2rem;
-  }
-
-  .social_media {
-    height: 24px;
-    width: 24px;
-  }
-
-  .disclaimer {
-    font-size: 1rem;
-    line-height: 1.6rem;
-    padding: 0 1.5rem;
-  }
-}
-@media only screen and (min-width: 992px) and (orientation: portrait) {
-  .footer_container {
-    height: var(--footerHeight_M);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1.4rem 0;
-  }
-
-  .footer_wrapper {
-    margin: 0;
-  }
-  .footer_container .copyright {
-    font-size: 1.4rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.6rem;
-  }
-  .links li {
-    font-size: 1.4rem;
-    font-weight: normal;
-    margin: 0 0.4rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.2rem;
-    margin-bottom: 1.6rem;
-  }
-  .follow_us li {
-    margin: 0 1.4rem;
-  }
-
-  .social_media {
-    height: 28px;
-    width: 28px;
-  }
-
-  .disclaimer {
-    font-size: 1.2rem;
-    line-height: 1.8rem;
-    padding: 0 1.5rem;
-  }
-}
-@media only screen and (min-width: 1200px) and (orientation: portrait) {
-  .footer_container {
-    height: var(--footerHeight_M);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1.8rem 0;
-  }
-
-  .footer_wrapper {
-    margin: 0;
-  }
-  .footer_container .copyright {
-    font-size: 1.4rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.6rem;
-  }
-  .links li {
-    font-size: 1.4rem;
-    font-weight: normal;
-    margin: 0 0.4rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.2rem;
-    margin-bottom: 1.6rem;
-  }
-  .follow_us li {
-    margin: 0 1.4rem;
-  }
-
-  .social_media {
-    height: 28px;
-    width: 28px;
-  }
-
-  .disclaimer {
-    font-size: 1.6rem;
-    line-height: 2.4rem;
-    padding: 0 2.5rem;
-  }
-}
-
-@media only screen and (min-width: 1600px) and (orientation: portrait) {
-  .footer_container {
-    height: var(--footerHeight_L);
-    padding: 2.2rem 0;
-  }
-
-  .footer_container .copyright {
-    font-size: 1.8rem;
-  }
-
-  .footer_container .links ul {
-    margin: 2rem;
-  }
-  .links li {
-    font-size: 1.8rem;
-    font-weight: normal;
-    margin: 0 0.6rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.6rem;
-    margin-bottom: 2rem;
-  }
-  .follow_us li {
-    margin: 0 1.8rem;
-  }
-
-  .social_media {
-    height: 40px;
-    width: 40px;
-  }
-
-  .disclaimer {
-    font-size: 1.4rem;
-    line-height: 2.1rem;
-    padding: 0 2.4rem;
-  }
-}
-@media only screen and (min-width: 1900px) and (orientation: portrait) {
-  .footer_container {
-    height: var(--footerHeight_L);
-    padding: 2.2rem 0;
-  }
-
-  .footer_container .copyright {
-    font-size: 1.8rem;
-  }
-
-  .footer_container .links ul {
-    margin: 2rem;
-  }
-  .links li {
-    font-size: 1.8rem;
-    font-weight: normal;
-    margin: 0 0.6rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.6rem;
-    margin-bottom: 2rem;
-  }
-  .follow_us li {
-    margin: 0 1.8rem;
-  }
-
-  .social_media {
-    height: 40px;
-    width: 40px;
-  }
-
-  .disclaimer {
-    font-size: 1.4rem;
-    line-height: 2.1rem;
-    padding: 0 2.4rem;
-  }
-}
-@media only screen and (min-width: 568px) and (orientation: landscape) {
-  .footer_container .copyright {
-    font-size: 1rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.2rem;
-  }
-  .links li {
-    font-size: 0.8rem;
-    font-weight: normal;
-    margin: 0 0.4rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  .follow_us li {
-    margin: 0 1.2rem;
-  }
-
-  .social_media {
-    height: 16px;
-    width: 16px;
-  }
-
-  .disclaimer {
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-    padding: 0 1.5rem;
-  }
-}
-@media only screen and (min-width: 768px) and (orientation: landscape) {
-  .footer_container .copyright {
-    font-size: 1.1rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.3rem;
-  }
-  .links li {
-    font-size: 01rem;
-    font-weight: normal;
-    margin: 0 0.6rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 1.5rem;
-    margin-bottom: 1rem;
-  }
-  .follow_us li {
-    margin: 0 1.2rem;
-  }
-
-  .social_media {
-    height: 18px;
-    width: 18px;
-  }
-
-  .disclaimer {
-    font-size: 1rem;
-    line-height: 1.4rem;
-    padding: 0 1.5rem;
-  }
-}
-@media only screen and (min-width: 992px) and (orientation: landscape) {
-  .footer_container {
-    height: var(--footerHeight_M);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .footer_wrapper {
-    margin: 0;
-  }
-  .footer_container .copyright {
-    font-size: 1.4rem;
-  }
-
-  .footer_container .links ul {
-    margin: 1.6rem;
-  }
-  .links li {
-    font-size: 1.4rem;
-    font-weight: normal;
-    margin: 0 0.4rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.2rem;
-    margin-bottom: 1.6rem;
-  }
-  .follow_us li {
-    margin: 0 1.4rem;
-  }
-
-  .social_media {
-    height: 28px;
-    width: 28px;
-  }
-
-  .disclaimer {
-    font-size: 1.2rem;
-    line-height: 1.8rem;
-    padding: 0 1.5rem;
-  }
-}
-@media only screen and (min-width: 1200px) and (orientation: landscape) {
-  /* --- FOOTER --- */
-  .footer_container {
-    height: var(--footerHeight_M);
-  }
-}
-@media only screen and (min-width: 1600px) and (orientation: landscape) {
-  .footer_container {
-    height: var(--footerHeight_L);
-    padding: 2.2rem 0;
-  }
-
-  .footer_container .copyright {
-    font-size: 1.8rem;
-  }
-
-  .footer_container .links ul {
-    margin: 2rem;
-  }
-  .links li {
-    font-size: 1.8rem;
-    font-weight: normal;
-    margin: 0 0.6rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.6rem;
-    margin-bottom: 2rem;
-  }
-  .follow_us li {
-    margin: 0 1.8rem;
-  }
-
-  .social_media {
-    height: 40px;
-    width: 40px;
-  }
-
-  .disclaimer {
-    font-size: 1.4rem;
-    line-height: 2.1rem;
-    padding: 0 2.4rem;
-  }
-}
-@media only screen and (min-width: 1900px) and (orientation: landscape) {
-  .footer_container {
-    height: var(--footerHeight_L);
-    padding: 2.2rem 0;
-  }
-
-  .footer_container .copyright {
-    font-size: 1.8rem;
-  }
-
-  .footer_container .links ul {
-    margin: 2rem;
-  }
-  .links li {
-    font-size: 1.8rem;
-    font-weight: normal;
-    margin: 0 0.6rem;
-  }
-
-  .footer_container .follow_us ul {
-    margin-top: 2.6rem;
-    margin-bottom: 2rem;
-  }
-  .follow_us li {
-    margin: 0 1.8rem;
-  }
-
-  .social_media {
-    height: 40px;
-    width: 40px;
-  }
-
-  .disclaimer {
-    font-size: 1.4rem;
-    line-height: 2.1rem;
-    padding: 0 2.4rem;
-  }
+  line-height: 1.2rem;
+  padding: 0 0.5rem;
 }
