finished personalities css

--- a/src/css/personalities.css
+++ b/src/css/personalities.css
@@ -1,7 +1,7 @@
 /* ---Banner --- */
 #personalities_banner_container {
   width: 100%;
-  height: var(--vh);
+  height: 100vh;
   background-color: var(--mainBgColor);
   position: relative;
 }
@@ -18,7 +18,7 @@
 
 #personalities_banner_img {
   width: 100%;
-  height: calc(var(--vh) - var(--headerHeight_S));
+  height: calc(100vh - var(--headerHeight_S));
   position: absolute;
   top: 0;
   background-image: url(./../img/banner_overview.jpg);
@@ -67,14 +67,15 @@
   margin: var(--headerHeight_S) auto 0 auto;
 }
 #personalities_header {
-  width: 90%;
+  width: 100%;
   margin: 0 auto;
 }
 
 #personalities_header h1 {
   color: var(--secondFontColor);
+  width: 95%;
   font-weight: bold;
-  margin: 2rem 0.4rem;
+  margin: 0 auto 2rem auto;
   font-size: 1.3rem;
 }
 
@@ -85,25 +86,31 @@
   height: auto;
 }
 #gallery_wrapper {
-  width: 90%;
+  width: 100%;
+}
+#gallery_list {
+  width: 95%;
   height: auto;
+  list-style: none;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-evenly;
 }
-#gallery_wrapper a {
-  display: block;
+personalitycard-component {
   width: 50%;
+}
+#gallery_list li {
+  width: 100%;
   position: relative;
   cursor: pointer;
   text-decoration: none;
 }
 
 .personalities_card {
-  margin: 0.4rem;
-  height: 270px;
+  margin: 0.5rem;
+  height: 300px;
   position: relative;
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -124,21 +131,23 @@
 
 .card_desc_slide {
   width: 100%;
-  height: 130px;
+  height: 140px;
   position: relative;
   top: 0%;
   background-color: var(--secondBgColor);
   z-index: 10;
 }
 .img_wrapper {
-  height: 140px;
+  height: 160px;
   overflow: hidden;
 }
 
 .img_wrapper img {
   transition: transform 0.7s ease-in-out;
-  object-fit: cover;
+  height: 160px;
   width: 100%;
+  object-fit: cover;
+  object-position: 0 0;
 }
 .personalities_card:hover img {
   transform: scale(1.2);
@@ -164,84 +173,13 @@
 }
 
 @media only screen and (min-width: 568px) and (orientation: portrait) {
-  #personalities_header h1 {
-    font-size: 1.3rem;
-  }
-  #gallery_wrapper a {
-    width: 33.3%;
-  }
-  .personalities_card {
-    margin: 0.4rem;
-    height: 320px;
-  }
-  .personalities_card:hover .card_desc_slide::before {
-    height: 160px;
-  }
-
-  .card_desc_slide {
-    height: 160px;
-  }
-  .img_wrapper {
-    height: 160px;
-  }
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
+  personalitycard-component {
+    width: 25%;
+    margin: 0 auto;
   }
 }
 @media only screen and (min-width: 768px) and (orientation: portrait) {
   #personalities_banner_container {
-    height: 300px;
-  }
-  #personalities_banner {
-    height: 300px;
-  }
-
-  #personalities_banner_img {
-    height: 250px;
-  }
-  #personalities_banner_desc > h1 {
-    font-size: 2.2rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.2rem;
-  }
-  #personalities_header h1 {
-    font-size: 1.4rem;
-    margin: 1.2rem 0.5rem;
-  }
-  #gallery_wrapper a {
-    width: 25%;
-  }
-
-  .personalities_card {
-    margin: 0.4rem;
-    height: 350px;
-  }
-  .personalities_card:hover .card_desc_slide::before {
-    height: 100%;
-  }
-
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
-  }
-}
-@media only screen and (min-width: 992px) and (orientation: portrait) {
-  #personalities_banner_container {
     height: 370px;
   }
 
@@ -251,29 +189,9 @@
   #personalities_banner_img {
     height: 320px;
   }
-  #personalities_banner_desc > h1 {
-    font-size: 2.4rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.2rem;
-  }
-  #personalities_content {
-    margin: calc(var(--headerHeight_M)) auto 0 auto;
-  }
-  #personalities_header h1 {
-    font-size: 1.5rem;
-    margin: 1.2rem 0.5rem;
-  }
-  #gallery_wrapper a {
-    width: 25%;
-  }
 
   .personalities_card {
-    margin: 0.4rem;
     height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
   }
 
   .card_desc_slide {
@@ -282,227 +200,55 @@
   .img_wrapper {
     height: 175px;
   }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
+  .img_wrapper img {
+    height: 175px;
   }
 }
-@media only screen and (min-width: 1200px) and (orientation: portrait) {
-  #personalities_banner_desc > h1 {
-    font-size: 2.8rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.4rem;
-  }
-  #personalities_header {
-    width: 80%;
-  }
+@media only screen and (min-width: 992px) and (orientation: portrait) {
   #personalities_header h1 {
-    font-size: 1.7rem;
-    margin: 1.4rem 0.5rem;
+    width: 750px;
   }
-  #gallery_wrapper {
-    width: 80%;
-  }
-  #gallery_wrapper a {
-    width: 20%;
-  }
-  .personalities_card {
-    margin: 0.7rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
-  }
-
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
-  }
-}
-@media only screen and (min-width: 1600px) and (orientation: portrait) {
-  #personalities_banner_container {
-    height: 450px;
-  }
-
-  #personalities_banner {
-    height: 450px;
-  }
-  #personalities_banner_img {
-    height: 400px;
-  }
-  #personalities_banner_desc > h1 {
-    font-size: 3.2rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.8rem;
-  }
-  #personalities_content {
-    margin: calc(var(--headerHeight_L)) auto 0 auto;
-  }
-  #personalities_header {
-    width: 80%;
-  }
-  #personalities_header h1 {
-    font-size: 1.8rem;
-    margin: 1.6rem 0.6rem;
-  }
-  #gallery_wrapper {
-    width: 80%;
-  }
-  #gallery_wrapper a {
-    width: 20%;
-  }
-  .personalities_card {
-    margin: 0.7rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
-  }
-
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
-  }
-}
-@media only screen and (min-width: 1900px) and (orientation: portrait) {
-  #personalities_banner_desc > h1 {
-    font-size: 4.5rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 2.4rem;
-    margin: 0.75em auto;
-  }
-  #personalities_header {
-    width: 80%;
-  }
-  #personalities_header h1 {
-    font-size: 2.1rem;
-    margin: 1.6rem 0.6rem;
-  }
-  #gallery_wrapper {
-    width: 80%;
-  }
-  #gallery_wrapper a {
-    width: 12.5%;
-  }
-  .personalities_card {
-    margin: 1rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
-  }
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.6rem;
-  }
-  .card_text > p {
-    font-size: 1.2rem;
-    margin: 2rem 0;
+  #gallery_list {
+    width: 750px;
   }
 }
 
 @media only screen and (min-width: 568px) and (orientation: landscape) {
   #personalities_banner_container {
-    height: var(--vh);
+    height: 100vh;
   }
 
   #personalities_banner {
     height: inherit;
   }
   #personalities_banner_img {
-    height: calc(var(--vh) - var(--headerHeight_S));
+    height: calc(100vh - var(--headerHeight_S));
   }
   #galery_container {
     margin: calc(var(--headerHeight_S)) auto 0 auto;
   }
-  #personalities_header h1 {
-    font-size: 1.3rem;
-    margin: 2.5rem 0.5rem;
-  }
-  #gallery_wrapper a {
-    width: 33.3%;
+
+  personalitycard-component {
+    width: 25%;
   }
   .personalities_card {
-    margin: 0.4rem;
-    height: 350px;
-  }
-
-  .card_desc_slide::before {
-    height: 5%;
+    height: 300px;
   }
 
   .card_desc_slide {
-    height: 175px;
+    height: 140px;
   }
   .img_wrapper {
-    height: 175px;
+    height: 160px;
   }
-  .card_text {
-    top: 20%;
-    left: 8%;
-  }
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1rem;
-    margin: 1.6rem 0;
+
+  .img_wrapper img {
+    height: 160px;
   }
 }
 @media only screen and (min-width: 768px) and (orientation: landscape) {
-  #personalities_banner_desc > h1 {
-    font-size: 2.2rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.2rem;
-  }
-  #personalities_header h1 {
-    font-size: 1.4rem;
-    margin: 2.5rem 0.5rem;
-  }
-  #gallery_wrapper a {
-    width: 25%;
-  }
-
   .personalities_card {
-    margin: 0.4rem;
     height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
   }
 
   .card_desc_slide {
@@ -511,13 +257,8 @@
   .img_wrapper {
     height: 175px;
   }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
+  .img_wrapper img {
+    height: 175px;
   }
 }
 @media only screen and (min-width: 992px) and (orientation: landscape) {
@@ -531,185 +272,40 @@
   #personalities_banner_img {
     height: 320px;
   }
-  #personalities_banner_desc > h1 {
-    font-size: 2.4rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.2rem;
-  }
+
   #personalities_content {
     margin: calc(var(--headerHeight_M)) auto 0 auto;
   }
   #personalities_header h1 {
-    font-size: 1.5rem;
-    margin: 1.2rem 0.5rem;
+    width: 750px;
   }
-  #gallery_wrapper a {
-    width: 25%;
-  }
-
-  .personalities_card {
-    margin: 0.4rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
-  }
-
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
+  #gallery_list {
+    width: 750px;
   }
 }
 @media only screen and (min-width: 1200px) and (orientation: landscape) {
-  #personalities_banner_desc > h1 {
-    font-size: 2.8rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.4rem;
-  }
-  #personalities_header {
-    width: 80%;
-  }
   #personalities_header h1 {
-    font-size: 1.7rem;
-    margin: 1.4rem 0.5rem;
+    width: 1120px;
   }
-  #gallery_wrapper {
-    width: 80%;
-  }
-  #gallery_wrapper a {
-    width: 20%;
-  }
-  .personalities_card {
-    margin: 0.7rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
+  #gallery_list {
+    width: 1120px;
+    justify-content: flex-start;
   }
 
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
+  personalitycard-component {
+    width: 186px;
   }
 }
 @media only screen and (min-width: 1600px) and (orientation: landscape) {
-  #personalities_banner_container {
-    height: 450px;
-  }
-
-  #personalities_banner {
-    height: 450px;
-  }
-  #personalities_banner_img {
-    height: 400px;
-  }
-  #personalities_banner_desc > h1 {
-    font-size: 3.2rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 1.8rem;
-  }
-  #personalities_content {
-    margin: calc(var(--headerHeight_L)) auto 0 auto;
-  }
-  #personalities_header {
-    width: 80%;
-  }
   #personalities_header h1 {
-    font-size: 1.8rem;
-    margin: 1.6rem 0.6rem;
+    width: 1204px;
   }
-  #gallery_wrapper {
-    width: 80%;
-  }
-  #gallery_wrapper a {
-    width: 20%;
-  }
-  .personalities_card {
-    margin: 0.7rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
+  #gallery_list {
+    width: 1204px;
+    justify-content: flex-start;
   }
 
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.4rem;
-  }
-  .card_text > p {
-    font-size: 1.1rem;
-    margin: 2rem 0;
-  }
-}
-@media only screen and (min-width: 1900px) and (orientation: landscape) {
-  #personalities_banner_desc > h1 {
-    font-size: 4.5rem;
-  }
-  #personalities_banner_desc > h2 {
-    font-size: 2.4rem;
-    margin: 0.75em auto;
-  }
-  #personalities_header {
-    width: 80%;
-  }
-  #personalities_header h1 {
-    font-size: 2.1rem;
-    margin: 1.6rem 0.6rem;
-  }
-  #gallery_wrapper {
-    width: 80%;
-  }
-  #gallery_wrapper a {
-    width: 12.5%;
-  }
-  .personalities_card {
-    margin: 1rem;
-    height: 350px;
-  }
-  .card_desc_slide::before {
-    height: 5%;
-  }
-  .card_desc_slide {
-    height: 175px;
-  }
-  .img_wrapper {
-    height: 175px;
-  }
-
-  .card_text > h2 {
-    font-size: 1.6rem;
-  }
-  .card_text > p {
-    font-size: 1.2rem;
-    margin: 2rem 0;
+  personalitycard-component {
+    width: 200px;
   }
 }
