--- a/src/css/general.css
+++ b/src/css/general.css
@@ -51,7 +51,7 @@
   --secondProgressColor: #989999;
   --secondProgressNumberColor: #a5a6a8;
   --secondButtonColor: #5f394d;
-  --btnWarningColor: darkred;
+  --btnWarningColor: #dc3545;
   --btnWarningBgColor: rgb(247, 215, 215);
 
   /* --- TESTRESULT --- */
