--- a/src/css/personalitytest.css
+++ b/src/css/personalitytest.css
@@ -26,6 +26,16 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top;
+  opacity: 0;
+  animation: fadeIn 0.5s ease-in-out 0.5s 1 forwards;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 #test_banner_img::before {
   content: "";
