--- a/src/css/resultproperties.css
+++ b/src/css/resultproperties.css
@@ -184,3 +184,10 @@ resultproperties-component {
     padding: 0;
   }
 }
+@media only screen and (min-width: 1600px) and (orientation: landscape) {
+  #result_wrapper {
+    min-height: calc(100vh - 488px);
+    margin: 0 auto;
+    padding: 3rem 0;
+  }
+}
