changing banner container

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -6,12 +6,30 @@
   width: 100%;
   min-height: calc(100vh - var(--headerHeight_S));
   margin-top: var(--headerHeight_S);
+  background-color: var(--mainBgColor);
   background-image: url(../img/banner_home.jpg);
   background-position: center top;
   background-size: cover;
   background-repeat: no-repeat;
+  position: relative;
 }
-#home_banner_img {
+#home_banner_container::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.35);
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+/* #home_banner_img {
   width: 100%;
   min-height: calc(100vh - var(--headerHeight_S));
   background-color: rgba(0, 0, 0, 0.35);
@@ -19,7 +37,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
+} */
 
 #home_banner_desc {
   color: var(--mainFontColor);
@@ -28,6 +46,8 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  position: relative;
+  z-index: 2;
 }
 
 #home_banner_desc > h1 {
@@ -145,7 +165,7 @@
 @media only screen and (min-width: 992px) and (orientation: landscape) {
   #home_banner_container {
     min-height: calc(100vh - var(--headerHeight_M));
-    margin-top: var(--headerHeight_M);
+    padding-top: var(--headerHeight_M);
   }
   #home_banner_img {
     min-height: calc(100vh - var(--headerHeight_M));
